# nemo

./: .gitignore  MODELO.TXT  README.md  pyproject.toml
inputs/: stopwords.py
inputs/vector_retrieval/: BUSCA.CFG  GLI.CFG  INDEX.CFG  PC.CFG
nemo/: constants.py  importing.py  protocol.py  tools.py
nemo/files/: csv.py  html.py  pdf.py  xml.py
nemo/preprocessing/: dataframe.py  indexing.py  query.py  text.py  tf_idf.py  utils.py  xml.py
nemo/retrieval_assignment/: inverted_list.py  main.py  query_processor.py  search_engine.py  vector_model.py
nemo/stopwords/: __init__.py
nemo/vector_retrieval/: index_builder.py  indexing.py  inverted_list.py  main.py  metrics.py  query.py  query_processor.py  search.py  search_engine.py  tf_idf.py  vector_model.py
outputs/vector_retrieval/RESULT/: analysis_results.json  analysis_results.txt  consultas.csv  inverted_list.csv  resultados.csv
tests/: test_knime_project.py
tests/files/: test_read_csv.py  test_read_xml.py
tests/importing/: test_read_csv.py  test_read_xml.py
tests/preprocessing/dataframe/: test_apply_stemming.py  test_create_bag_of_words_matrix.py  test_generate_ngrams_column.py  test_map_column_values.py  test_remove_punctuation.py  test_remove_stopwords.py  test_to_lowercase.py
tests/preprocessing/indexing/: test_gen_inverted_index.py
tests/preprocessing/search_engine/: test_gen_results.py
tests/preprocessing/text/: test_generate_ngram_range.py  test_stem_text.py  (+7 more)
tests/retrieval_assignment/: test_gen_inverted_list.py  test_gen_processed_queries.py  test_gen_results.py  test_gen_vector_model.py
(+9 files in other folders)
