[tool.poetry]
authors = ["Isadora Tebaldi <isadoratebaldi@gmail.com>"]
description = "Repositório de estudo sobre Agentes de Plano Diretor"
name = "nemo"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pytest = "^8.2"
ruff-lsp = "^0.0.53"
langchain-community = "^0.4.1"
pypdf = "^6.9.2"
bs4 = "^0.0.2"
pandas = "^3.0.2"
toolz = "^1.1.0"
nltk = "^3.9.4"
pydantic = "^2.12.5"
langdetect = "^1.0.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
line-length = 85
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 85

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s | %(levelname)s | %(filename)s:%(lineno)d | %(message)s"
log_cli_date_format = "%H:%M:%S"
